versao pos segunda reuniao

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                     <select class="select" name="maquina" id="selectMaquina" onchange="changeMaquina()">
                         <option value="410">410</option>
                         <option value="411">411</option>
+                        <option selected="default">Selecione</option>
                     </select>  
                     <button class="buttonOK" id="buttonOP" onclick="insertOP()">OK</button>
                     <br><br>
@@ -65,7 +66,7 @@
     </div>
     <div class="painel">
         <h1>ÚLTIMOS APONTAMENTOS</h1>
-        <iframe id="iframeApontamentos" width="600px" height="450px" src="maquinas/410">  </iframe>
+        <iframe id="iframeApontamentos" width="320px" height="450px" src="/defultIframe">  </iframe>
     </div>
     </body>
 
