--- a/maquinas.html
+++ b/maquinas.html
@@ -19,7 +19,7 @@
                 </div>
     </div>
     <div>
-        <button onclick="window.history.back()"> Voltar </button>
+        <button onclick="window.location.href='/'"> Voltar </button>
     </div>
     </body>
 
