--- a/defaultIfrme.html
+++ b/defaultIfrme.html
@@ -1,5 +1,10 @@
 <html>
+    <style>
+        h1 {
+            color: white;
+        }
+    </style>
     <body>
-        <h1> Máquina não selecionada !</h1>
+        <h1> Máquina não selecionada!</h1>
     </body>
 </html>
