--- a/maquinas.html
+++ b/maquinas.html
@@ -3,7 +3,7 @@
         <link rel="stylesheet" href="styles/styles.css">
     </head>
     <body>
-    <div class="principal">
+    <div class="maquinas">
         <h2>CONTADOR DE TEMPO</h2>
         <div class="container">
                 <div class="container">
